# SeamCarving

./: CMakeLists.txt  README.md
Data/: save.txt
src/: Image.cpp  Image.h  Seamcarver.cpp  Seamcarver.h  cvui.h  detectKey.cpp  detectKey.h  main.cpp
test/: tests.cpp
